# ChangeLog for dev-python/PyQt4
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  14 Jul 2009; Markos Chandras <hwoarang@gentoo.org>
  -PyQt4-4.5.2_pre20090706.ebuild:
  Remove old snapshot

*PyQt4-4.5.2_pre20090706 (08 Jul 2009)

  08 Jul 2009; Markos Chandras <hwoarang@gentoo.org>
  -PyQt4-4.5.2_pre20090626.ebuild, +PyQt4-4.5.2_pre20090706.ebuild:
  Bump PyQt4 snapshot

*PyQt4-4.5.2_pre20090626 (28 Jun 2009)

  28 Jun 2009; Markos Chandras <hwoarang@gentoo.org>
  +PyQt4-4.5.2_pre20090626.ebuild, -files/fix_license_check.patch:
  New snapshot

  18 Jun 2009; Davide Pesavento <davidepesa@gmail.com>
  -PyQt4-4.5.1_pre20090612.ebuild:
  4.5.1 is in portage, drop old snapshot.

  18 Jun 2009; Davide Pesavento <davidepesa@gmail.com>
  -files/PyQt4-4.4.4-qgraphicsproxywidget-avoid-event-callback-loop.patch:
  Removed obsolete patch.

  15 Jun 2009; Davide Pesavento <davidepesa@gmail.com>
  PyQt4-4.5.1_pre20090612.ebuild, metadata.xml:
  Drop bogus qt3support USE flag.

*PyQt4-4.5.1_pre20090612 (14 Jun 2009)

  14 Jun 2009; Markos Chandras <hwoarang@gentoo.org>
  +PyQt4-4.5.1_pre20090612.ebuild:
  New snapshot

  09 Jun 2009; Markos Chandras <hwoarang@gentoo.org> -PyQt4-4.5.ebuild:
  On tree

  09 Jun 2009; Markos Chandras <hwoarang@gentoo.org> PyQt4-4.5.ebuild:
  Code fixes, fix insecture rpath issues

  08 Jun 2009; Davide Pesavento <davidepesa@gmail.com> PyQt4-4.5.ebuild:
  Sync with portage.

  06 Jun 2009; Markos Chandras <hwoarang@gentoo.org>
  -PyQt4-4.5_pre20090603.ebuild, PyQt4-4.5.ebuild:
  Drop snapshot, fix licenses

  05 Jun 2009; Ben de Groot <yngwin@gentoo.org>
  -PyQt4-4.4.5_pre20090208-r2.ebuild:
  Remove obsolete snapshot

  05 Jun 2009; Ben de Groot <yngwin@gentoo.org> PyQt4-4.5.ebuild:
  Sync ebuild with in tree version, up sip dependency to 4.8

*PyQt4-4.5 (05 Jun 2009)

  05 Jun 2009; Markos Chandras <hwoarang@gentoo.org> +PyQt4-4.5.ebuild:
  Version bump

*PyQt4-4.5_pre20090603 (04 Jun 2009)
