@@ -1,3 +1,5 @@
 AUX configure.py.patch 1727 RMD160 31802058d0b0488264cdbcfeebd7ce9aff250957 SHA1 df4fee27f1486422b25d0072cfc388b207814c8f SHA256 06ee44a9fe43615b6bfada4aa7294303c016fd7c378ddf537823e33546306926
-MISC ChangeLog 7243 RMD160 95c6fcb4b67ab202f1d60dacc643f91dd03856b8 SHA1 bb413383db3406c1e7cb3ced00da4cbc7511b4f2 SHA256 64d0b11140fdaef49ac47221a390c9724363b9dcb7107d0d242e32a098474a8c
+DIST PyQt-x11-gpl-4.5.3-snapshot-20090724.tar.gz 6843221 RMD160 4eb6e41c7a3d63436f5f8566b766db67f7efce09 SHA1 cef5294a5a04c75b69a0853dde9e5b1bc0d18c48 SHA256 73a883c1b40fba38a1d635ced8a2a82fe4fed80462643378f1c36147f5e15a9e
+EBUILD PyQt4-4.5.3_pre20090724.ebuild 3222 RMD160 5a31ecbfe42d08019d914dfbb51f072f8e40f61c SHA1 4713ce0c19bd48538e1dd8e070e0eed55088e132 SHA256 318e52f9241465abee1334a891dd5da0a3e1decee514a882f31194759e1596b7
+MISC ChangeLog 7387 RMD160 b92a5fdf57eac76cf09408e52857882290e3cfac SHA1 889dfc20212cdcdb137e5bc1ae651a95f2e203de SHA256 bb45611ac1d92bbdb8ffc0217317a612f3accbb800906c521e00e75b61977257
 MISC metadata.xml 642 RMD160 0a9271db6e18561fdd834d054186fbb0445fc19b SHA1 27ab2a924dff45be4cef4efaa01a67bbe3bff2c7 SHA256 002a5a6bb12da2ef8b9e7b22541922ff4e92d7c1ae1d82c29bbd2c6c7faeb91c
