@@ -1,2 +1,4 @@
-MISC ChangeLog 1810 RMD160 ac23bb13bb160e3d7c3bcb18fc1956b6feb8df7b SHA1 0492e456298298c243c43bc0d67eea8205ebfc47 SHA256 517cb1c0c7a41bf05310e1ab3c579b4a4e9d00d90e8c127d83b9c8fce4eb548e
+DIST sip-4.8.2-snapshot-20090720.tar.gz 605551 RMD160 32c196cc38a969420901628e58369e9d43ccf0ee SHA1 04246af0178efb8ca813d726b59b875c74e3ad41 SHA256 b78a154945803c780bca77e1eea062488643d54b09035391b2458880ec28b2c8
+EBUILD sip-4.8.2_pre20090720.ebuild 1453 RMD160 124934d2ce54748dbafab1774131abed7ed57c6f SHA1 98a1857905f1cf6fbedbf140785d12f08a052e2b SHA256 1ce0cfcedd586ca9be14a064e4e895e38455f7b27b4ba91aeb68f09a9dac5a25
+MISC ChangeLog 1950 RMD160 6771102085e3864eb2a62419f728bd01f694879c SHA1 ee21f22d54048f28bb60c58a15e67417d7619c9a SHA256 d4d64f036cf0dc1b9b1e89f4f4e4a3b9435a2ba65b3e577d69a45d6136ecc17d
 MISC metadata.xml 157 RMD160 84dc01e4115bf31e84059fa795c95e94ad39df23 SHA1 fe6fa39ce2ba5cd6a8e7da28113fe05e22b5a39a SHA256 a2ffc792d4df94c3f8088e329c4bf74804540c2797f3e24ab0030acbdfd4b535
