@@ -3,6 +3,11 @@
 # Make sure the atoms you add are valid!
 
 # Markos Chandras <hwoarang@gentoo.org> (25 Jul 2009)
+# Snapshots are not for everybody :)
+=dev-python/sip-4.8.2_pre*
+=dev-python/PyQt4-4.5.3_pre*
+
+# Markos Chandras <hwoarang@gentoo.org> (25 Jul 2009)
 # Alpha versions are not for everybody :)
 =app-emulation/qtemu-2.0_alpha*
 
