@@ -2,6 +2,12 @@
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*PyQt4-4.5.3_pre20090724 (25 Jul 2009)
+
+  25 Jul 2009; Markos Chandras <hwoarang@gentoo.org>
+  +PyQt4-4.5.3_pre20090724.ebuild:
+  New snapshot
+
   14 Jul 2009; Markos Chandras <hwoarang@gentoo.org>
   -PyQt4-4.5.2_pre20090706.ebuild:
   Remove old snapshot
